Changed: class box border expansion for thread_list.php which also solves the border problems of old. Changed: Thread list is now 275px wide. Increase of 25px. Fixed: Incorrect username or password not showing error message when trying to login.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -209,7 +209,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 1px;
     border-right-width: 0px;
     border-bottom-width: 0px;
@@ -229,7 +229,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 1px;
     border-right-width: 1px;
     border-bottom-width: 0px;
@@ -249,7 +249,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 0px;
     border-right-width: 0px;
     border-bottom-width: 1px;
@@ -269,7 +269,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 0px;
     border-right-width: 1px;
     border-bottom-width: 1px;
@@ -289,7 +289,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 0px;
     border-right-width: 1px;
     border-bottom-width: 0px;
@@ -309,7 +309,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 0px;
     border-right-width: 1px;
     border-bottom-width: 1px;
@@ -329,7 +329,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 1px;
     border-right-width: 0px;
     border-bottom-width: 1px;
@@ -349,7 +349,7 @@ a {
     padding-bottom: 2px;
     padding-left: 2px;
     border: #000000;
-    border-style: solid;
+    border-style: none;
     border-top-width: 1px;
     border-right-width: 1px;
     border-bottom-width: 1px;
